--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Blueprint: On Scroll Effect Layout</title>
+		<title>Martin Luther King</title>
 		<meta name="description" content="Blueprint: On Scroll Effect Layout" />
 		<meta name="keywords" content="on scroll, effect, slide in, layout, template, transition, javascript" />
 		<meta name="author" content="Codrops" />
@@ -16,15 +16,16 @@
 	<body>
 		<div class="container">
 			<header class="clearfix">
-				<span>Marine BOITEL </span>
+				<span>Marine </span>
 				<h1>Martin Luther King</h1>
-				
+
 			</header>
 			<div id="cbp-so-scroller" class="cbp-so-scroller">
 				<section class="cbp-so-section">
 					<article class="cbp-so-side cbp-so-side-left">
-						<h2>Martin Luther King</h2>
-						<p>Fruitcake toffee jujubes. Topping biscuit sesame snaps jelly caramels jujubes tiramisu fruitcake. Marzipan tart lemon drops chocolate sesame snaps jelly beans.</p>
+						<h2>BIOGRAPHIE</h2>
+						<p>Martin Luther King junior, né à Atlanta, est originaire d'une famille de pasteurs et bénéficie d'un milieu social plutôt favorable. En 1954 il devient pasteur baptiste et exerce à Montgomery, dans l’Alabama. En 1955, il prend la tête du mouvement de soutien à Rosa Parks arrêtée par la police pour avoir refusé de céder sa place à un blanc dans un bus, et lance un appel au boycott de la compagnie de bus de la ville. Malgré les intimidations, le boycott durera un an jusqu'à ce que la Cour Suprême donne tort à la compagnie de bus.
+</p>
 					</article>
 					<figure class="cbp-so-side cbp-so-side-right">
 						<img src="images/1.jpg" alt="img01">
@@ -35,14 +36,14 @@
 						<img src="images/2.jpg" alt="img01">
 					</figure>
 					<article class="cbp-so-side cbp-so-side-right">
-						<h2>Plum caramels</h2>
-						<p>Lollipop powder danish sugar plum caramels liquorice sweet cookie. Gummi bears caramels gummi bears candy canes cheesecake sweet roll icing dragée. Gummies jelly-o tart. Cheesecake unerdwear.com candy canes apple pie halvah chocolate tiramisu.</p>
+						<h2>NON VIOLENCE</h2>
+						<p>L'impact médiatique de cette victoire amène Martin Luther King à fonder le SCLC (conférence des leaders chrétiens du sud) avec d'autres personnalités noires et à en devenir le président. Partisan de la non-violence, il décide d'étendre la lutte pour les droits civiques des Noirs à l'ensemble des Etats-Unis.</p>
 					</article>
 				</section>
 				<section class="cbp-so-section">
 					<article class="cbp-so-side cbp-so-side-left">
-						<h2>I have a dream</h2>
-						<p>Soufflé bonbon jelly cotton candy liquorice dessert jelly bear claw candy canes. Pudding halvah bonbon marzipan powder. Marzipan gingerbread sweet jelly.</p>
+						<h2>I HAVE A DREAM</h2>
+						<p>En 1963, il est à la tête de grandes campagnes pour les droits civiques, le droit de vote des Noirs, la fin de la ségrégation, une meilleure éducation. Il est arrêté à plusieurs reprises. Dans son discours du 28 août 1963, "I have a dream", devant 250000 personnes, il lance un appel pour un pays où tous les hommes partageraient les mêmes droits dans la justice et la paix. La violence des forces de l'ordre et le harcèlement des ségrégationnistes face aux luttes pacifiques engendrent une vague de sympathie au sein de l'opinion publique pour le mouvement des droits civiques.</p>
 					</article>
 					<figure class="cbp-so-side cbp-so-side-right">
 						<img src="images/3.jpg" alt="img01">
@@ -53,14 +54,18 @@
 						<img src="images/4.jpg" alt="img01">
 					</figure>
 					<article class="cbp-so-side cbp-so-side-right">
-						<h2>Carrot cake</h2>
-						<p>Sesame snaps sweet wafer danish. Chupa chups carrot cake icing donut halvah bonbon. Chocolate cake candy marshmallow pudding dessert marzipan jujubes sugar plum.</p>
+						<h2>PRIX NOBEL</h2>
+						<p>En 1964, Martin Luther King reçoit le Prix Nobel de la Paix dont il est le plus jeune lauréat. La plupart des droits pour lesquels il milite sont votés comme lois avec le Civil Rights Act de 1964 et le Voting Rights Act de 1965. </p>
 					</article>
 				</section>
 				<section class="cbp-so-section">
 					<article class="cbp-so-side cbp-so-side-left">
-						<h2>Pudding lollipop</h2>
-						<p>Chupa chups pudding lollipop gummi bears gummies cupcake pie. Cookie cotton candy caramels. Oat cake dessert applicake. Sweet roll tiramisu sweet roll sweet roll.</p>
+						<h2>FIN DE VIE</h2>
+						<p>Après ses succès dans le sud des Etats-Unis, Martin Luther King s'installe à Chicago en 1966 et cherche à étendre le mouvement dans le nord du pays. Les manifestations qu'il organise à Chicago suscitent une réaction encore plus violente que dans le sud.
+
+En 1967, il se déclare contre la guerre au Vietnam, estimant que les Etats-Unis "occupent le pays comme une colonie américaine". Il s'engage dans la lutte contre la pauvreté et organise la "Campagne des pauvres" pour s'attaquer aux problèmes de justice économique.
+
+Martin Luther King meurt assassiné par un ségrégationniste blanc le 4 avril 1968 à Memphis alors qu'il soutenait une grève d'éboueurs.</p>
 					</article>
 					<figure class="cbp-so-side cbp-so-side-right">
 						<img src="images/5.jpg" alt="img01">
