--- a/index.html
+++ b/index.html
@@ -76,8 +76,24 @@ Martin Luther King meurt assassiné par un ségrégationniste blanc le 4 avril 1
 						<img src="images/6.jpg" alt="img01">
 					</figure>
 					<article class="cbp-so-side cbp-so-side-right">
-						<h2>Soufflé bonbon</h2>
-						<p>Cake cotton candy lollipop. Cake croissant cheesecake candy sugar plum icing apple pie wafer. Pie sugar plum tiramisu tiramisu pie fruitcake candy icing. Candy icing gummies gummies cheesecake brownie lemon drops chocolate gingerbread.</p>
+						<h2>HOMMAGE</h2>
+						<p>Martin Luther King est nommé personnalité de l'année selon Time Magazine en 1963.
+
+<p>Il reçoit en 1965 le médaillon des libertés américaines du American Jewish Committee « pour son exceptionnel avancement sur les principes des libertés humaines ».</p>
+
+<p>En 1966, la fédération du Planning familial d'Amérique lui décerne le prix Margaret Sanger « pour sa courageuse résistance à la bigoterie et à sa vie de dévouement à la progression de la justice sociale et de la dignité humaine ».</p>
+
+ <p>Martin Luther King a reçu 20 Docteur honoris causa d'universités américaines et étrangères.</p>
+
+<p>Il reçoit à titre posthume le prix Marcus Garvey du gouvernement de la Jamaïque en 1968 et en 1971, il reçoit le Grammy Award du meilleur enregistrement parlé pour son discours Why I Oppose the War in Viêt Nam (Pourquoi je m'oppose à la guerre du Viêt Nam). Le président Jimmy Carter lui décerne la Presidential Medal of Freedom à titre posthume en 1977. En 1980, le quartier où Martin Luther King passa sa jeunesse est déclaré monument historique.</p>
+
+<p>Le 2 novembre 1983, le président Ronald Reagan signe une loi créant un jour férié l'honorant, le Martin Luther King Day. Les premiers états l'appliquent en 1986 et le 17 janvier 2000, le jour férié est officiellement observé dans les 50 états.</p>
+
+<p>En 1998, la fraternité Alpha Phi Alpha, dont il faisait partie, fut autorisée par le Congrès des États-Unis à créer un mémorial. Le 16 octobre 2011, le mémorial Martin Luther King fut inauguré par le président Barack Obama. Il se dresse à quelques dizaines de mètres du Lincoln Memorial, où King avait prononcé son célèbre discours « I Have a Dream », le 28 août 1963. L'inauguration devait avoir lieu le 28 août, mais elle fut annulée à cause de l'ouragan Irene. Martin Luther King est le premier Afro-Américain et le deuxième non-président à être honoré par un monument dans le National Mall de Washington, DC. </p>
+
+<p>Martin Luther King est considéré comme l'auteur des plus grands discours historiques des États-Unis, aux côtés d'Abraham Lincoln ou de John Fitzgerald Kennedy108. Plus de 730 villes des États-Unis ont une rue Martin Luther King en 2006 et de nombreuses autres ont été baptisées à son nom dans le monde entier.</p>
+
+<p>En France, en 2015, 21 établissements scolaires portent son nom, fait rarissime pour une personnalité étrangère.</p>
 					</article>
 				</section>
 			</div>
